2003-10-21  Andreas Kupries  <andreask@activestate.com>

	* README: Updated to describe the new way of adding modules to
	  tcllib.

	* INSTALL.txt: Updated references to tcllib 1.4 to 1.5.

	* installed_modules.tcl: Changed doc action for snit from _null to
	  _man (We have doctools manpages for snit for a while now).

	* all.tcl: Added code to try to load 'Tk'. This allows the
	  execution of 'tk' constrained tests, if Tk is present (for
	  example when this code is run run by 'wish'). An example of a
	  module having such tests is 'snit'.

2003-07-26  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* modules/md5crypt: New module: MD5-crypt implementation
	* installed_modules.tcl: Added new module.
	* sak.tcl: Added reference for critcl impl of md5crypt.

2003-07-24  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* sak.tcl: Added a command for generating a YAML description
	file. This is much like the TIP55 format but used for FreePAN.
	* sak.tcl: Altered the finding of critcl under Windows.

2003-07-15  Andreas Kupries  <andreask@activestate.com>

	* modules/snit: New module, William Duquette's oo package 'snit'
	  (aka Snit Is Not IncrTcl).

	* tcllib_version.tcl: Upped to 1.5 because of the new modules
	  (snit, inifile).

	* installed_modules.tcl: Added 'snit' to list of modules.

2003-07-04  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* installed_modules.tcl: Added the new module 'inifile' to the
	  list of packages handled by 'sak'.

2003-07-04  Miguel Sofer <msofer@users.sf.net>

	* modules/ftpd.man:
	* modules/ftpd.tcl (::ftpd::server): the variable ::ftpd::port is
	now updated to reflect the port were the server was opened. This
	is only relevant when a server was requested at port 0 - ie, at a
	port determined by the OS.	

2003-05-26  Andreas Kupries  <andreask@activestate.com>

	* sak.tcl: Updated rpm spec generator using the latest .spec by
	  Jean-Luc as template. The spec now determiens the list of files